# benchmark-websocket

./: .gitignore  README.md  azure-pipelines.yml  prepare.sh  sock-config-4m.sh  sock-config-5m.sh  sock-config-6m.sh  sock-config.sh
client/: CMakeLists.txt  Dockerfile
client/main/: CMakeLists.txt
client/main/src/: App.cpp  AppComponent.hpp  ClientSocketListener.cpp  ClientSocketListener.hpp  Logger.cpp  Logger.hpp  Meter.hpp
client/main/test/: tests.cpp
client/src/: App.cpp  AppComponent.hpp  ClientSocketListener.hpp  Logger.hpp
client/test/: tests.cpp
server/: CMakeLists.txt  Dockerfile
server/main/: CMakeLists.txt
server/main/src/: App.cpp  AppComponent.hpp  Logger.cpp  Meter.hpp
server/main/src/controller/: MyController.hpp  WebSocketListener.cpp  WebSocketListener.hpp
server/main/src/dto/: MyDto.hpp
server/main/test/: WebSocketTest.cpp  WebSocketTest.hpp  tests.cpp
server/src/: App.cpp  AppComponent.hpp  Logger.cpp  Logger.hpp  Meter.hpp
server/src/controller/: MyController.hpp  WebSocketListener.hpp
server/test/: WebSocketTest.cpp  tests.cpp
server/utility/: install-oatpp-modules.sh
